cmake_minimum_required(VERSION 3.8)
project(coxswain)

if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif ()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

add_executable(coxswain
        src/coxswain.cpp
        include/coxswain.h
        src/main.cpp
        )

install(DIRECTORY launch
        DESTINATION share/${PROJECT_NAME}
        )

ament_target_dependencies(coxswain
        rclcpp
        std_msgs
        )

install(TARGETS
        coxswain
        DESTINATION lib/${PROJECT_NAME}
        )

ament_package()
